# contract-diff-agent

./: .gitignore  README.md  pyproject.toml
data/test_contracts/: .gitkeep
