[project]
name = "contract-diff-agent"
version = "0.1.0"
description = "Autonomous AI agents for comparing contracts and extracting structured amendment changes from scanned legal documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=1.1.0",
  "langchain-core>=1.1.0",
  "langchain-openai>=1.1.0",
  "langchain-community>=0.4.1",
  "python-dotenv>=1.2.1",
  "langfuse>=3.10.1",
  "pydantic>=2.12.5",
]
